<resources>
    <string name="app_name">AleAcevedo</string>
    <string name="txt_image_description">Descripcion</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="txt_btn_log_in">Aceptar</string>
    <string name="txt_list_view">Registro</string>
    <string name="txt_log_in">LogIn</string>
    <string name="txt_register">Registro</string>
    <string name="hint_phone">Teléfono</string>
    <string name="txt_btn_register">Registrarse</string>
    <string name="txt_home">Home</string>
    <string name="txt_read_frecuency">¿Con qué frecuencia lees como hobbie?</string>
    <string name="txt_yes">Sí</string>
    <string name="txt_no">No</string>
    <string name="txt_uses_app">¿Usas alguna aplicación para obtener recomendaciones de libros?</string>
    <string name="txt_disavantage">¿Cuál dirías que es el principal problema de las aplicaciones de recomendaciones de libros?</string>
    <string name="txt_functionalities">Marca las funcionalidades que más te interesarían en una aplicación de libros</string>
    <string name="txt_rec_per_author">Recomendaciones por autor</string>
    <string name="txt_rec_per_gender">Recomendaciones por género</string>
    <string name="txt_shelf_organization">Organización de libreros</string>
    <string name="txt_rec_per_topic">Recomendaciones por cierta trama</string>
    <string name="txt_interested">¿Estarías interesado en una app para la organización y recomendación de libros?</string>
    <string name="txt_create_survey">Crear encuesta</string>
    <string name="txt_exit">Salir</string>
    <string name="txt_name">Nombre de la encuesta</string>
    <string name="txt_send">Aceptar</string>
    <string name="txt_survey">Mi encuesta</string>
    <string name="txt_detail">Detalle</string>
    <string name="txt_edit">Editar</string>
    <string name="txt_see_list">Ver lista</string>
    <string name="txt_my_list">Mi lista</string>
    <string name="txt_gender">Género</string>
    <string name="txt_men">Masculino</string>
    <string name="txt_woman">Femenino</string>
    <string name="txt_age_category">¿Cuál clasificación de literatura sueles leer más?</string>
    <string name="txt_book_selection">Marca los factores en los que más te centras para seleccionar un libro</string>
    <string name="txt_select_per_author">Autor</string>
    <string name="txt_select_per_gender">Género</string>
    <string name="txt_select_per_review">Reseñas</string>
    <string name="txt_write_reviews">¿Te gusta escribir reseñas de los libros que lees?</string>
    <string name="hint_date">Click para seleccionar la fecha</string>
    <string name="hint_time">Click para seleccionar la hora</string>
    <string name="txt_adapter_bd">Recycler base de datos</string>
    <string name="txt_recycler_view_data_base">Recycler BD</string>
</resources>